refactor: list 만드는 코드 자바 최신 문법으로 수정 및 함수추출 적용